--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
     "axios": "^1.1.2",
+    "driver.js": "^0.9.8",
     "element-plus": "^2.2.17",
     "sass": "^1.55.0",
+    "screenfull": "^5.1.0",
     "scss": "^0.2.4",
     "vue": "^3.2.37",
+    "vue-i18n": "^9.3.0-beta.6",
     "vue-router": "^4.1.5",
     "vuex": "^4.0.2"
   },
